--- a/roles/openshift_node_dnsmasq/tasks/main.yml
+++ b/roles/openshift_node_dnsmasq/tasks/main.yml
@@ -6,7 +6,7 @@
   
 - name: Set fact using_network_manager
   set_fact:
-    network_manager_active: "{{ True if 'ActiveState=active' in nm_show.stdout else False }}"
+    network_manager_active: "{{ True if 'ActiveState=active' in nm_show.stdout else True }}"
     
 - name: Install dnsmasq
   action: "{{ ansible_pkg_mgr }} name=dnsmasq state=installed"
